added getAllFils function

--- a/src/app/modules/dashboard/components/form/form.component.html
+++ b/src/app/modules/dashboard/components/form/form.component.html
@@ -5,5 +5,5 @@
             <input matInput formControlName="name">
         </mat-form-field>
     </form>
-    <button mat-raised-button color="primary" [disabled]="characterForm.invalid" (click)="searchCharacter()"> Search Character</button>
+    <!--<button mat-raised-button color="primary" [disabled]="characterForm.invalid" (click)="searchCharacter()"> Search Character</button>-->
 </div>
